# OLIPD

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: brief-distillate.md  brief.docx  project-context.md
docs/implementation-artifacts/: 1-1-project-scaffold-dependency-management.md  1-2-implementation-of-security-middleware-safetensors-filter.md  1-3-core-api-key-authentication-middleware.md  1-4-base-dockerization-for-gpu-environment.md  sprint-status.yaml
docs/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-19.md  prd.md
src/olipd/api/: deps.py
src/olipd/cli/: main.py
src/olipd/core/: config.py  security.py
tests/: test_api_auth.py  test_core_security.py
